# Kx

./: .bazelrc  .gitignore  .gitmodules  CMakeLists.txt  KremonteEngine.bat  KremonteEngineDebug.bat  KremonteEngineDebugClean.bat  MODULE.bazel  README.md  WORKSPACE.bazel
BUILD_KremonteEditor/: KremonteEditor.bat  KremonteEditor_DEBUG.bat  KremonteEditor_DEBUG_CLEAN.bat
BUILD_Sandbox/: Sandbox.bat  Sandbox.sh  Sandbox_DEBUG.bat  Sandbox_DEBUG_CLEAN.bat
Client/Kremonte_Engine/: CMakeLists.txt
Client/Kremonte_Engine/src/: Kremonte_Engine.cpp
Clients/KremonteEditor/src/: BUILD.bazel  KremonteEditor.cpp
Clients/Sandbox/src/: BUILD.bazel  SandboxApp.cpp
KRASKA/include/: Matrix.h
KRASKA/src/Gamut/: Matrix.cpp
Kremonte/: BUILD.bazel  CMakeLists.txt  Kremonte.h  kraspch.cpp  kraspch.h  krpch.cpp  krpch.h
Kremonte/Platform/Windows/: BUILD.bazel  WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
Kremonte/include/: Kremonte.h
Kremonte/src/: EntryPoint.h  krpch.h
Kremonte/src/Core/: Application.cpp  Application.h  Assert.h  BUILD.bazel  Base.cpp  Base.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Window.h
Kremonte/src/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Kremonte/src/Events/: ApplicationEvent.h  BUILD.bazel  Event.h  KeyEvent.h  MouseEvent.h
Kremonte/src/ImGUI/: BUILD.bazel  ImGUILayer.cpp  ImGUILayer.h
Kremonte/src/KRASKA/: BUILD.bazel  CMYK.h  KMachine.cpp  KMachine.h  KRASKAMachine.h  Puppet.h  Trit.h  Tryte.h
Kremonte/src/KRASKA/CPU/: BUILD.bazel  CPU.cpp  CPU.h  Register.cpp  Register.h
Kremonte/src/KRASKA/Gamut/: BUILD.bazel  Gamut.cpp  Gamut.h  Geometry.cpp  Geometry.h  KRASKA.h  KRASKA_Types.cpp  KRASKA_Types.h  Matrix.cpp  Matrix.h  MatrixCell.h
Kremonte/src/KRASKA/KRASKAboy/: BUILD.bazel
Kremonte/src/KRASKA/KRASKAboy/Base/: BUILD.bazel  Boot.h  Debugger.cpp  Debugger.h  Definitions.h  Input.cpp  Input.h  KRASKAboy.cpp  KRASKAboy.h  KRASKAboy_comp.h  KRASKAboy_prelude.h  Options.h
Kremonte/src/KRASKA/KRASKAboy/CPU/: Address.cpp  Address.h  BUILD.bazel  CPU.cpp  CPU.h  MMU.cpp  MMU.h  Opcode_Cycles.h  Opcode_Mapping.cpp  Opcode_Names.h  Opcodes.cpp  Register.cpp  Register.h  Serial.cpp  Serial.h  Timer.cpp  Timer.h
Kremonte/src/KRASKA/KRASKAboy/Cartridge/: BUILD.bazel  Cartridge.cpp  Cartridge.h  Cartridge_Info.cpp  Cartridge_Info.h
Kremonte/src/KRASKA/KRASKAboy/Util/: BUILD.bazel  KRboy_Files.cpp  KRboy_Files.h  KRboy_Log.cpp  KRboy_Log.h  KRboy_String_Utils.cpp  KRboy_String_Utils.h  bitwise.h
Kremonte/src/KRASKA/KRASKAboy/Video/: BUILD.bazel  Color.cpp  Color.h  Framebuffer.cpp  Framebuffer.h  Tile.cpp  Tile.h  Video.cpp  Video.h
Kremonte/src/KRASKA/Puppet/: BUILD.bazel  KRASKAboy.cpp  KRASKAboy.h  Puppet.cpp  Puppet.h
Kremonte/src/KRASKA/Puppet/Weavinglimb/: BUILD.bazel  Heartdrive.h  Heartridge.cpp  Heartridge.h  HeartridgeOptions.cpp  HeartridgeOptions.h  Weavinglimb.h
Kremonte/src/KRASKA/Weavinglimb/: BUILD.bazel  Heartdrive.h  Weavinglimb.h
Kremonte/src/KRASKA/libter27/: README  libter27io.c  libter9io.c  libter9io.h  terconst.c
Kremonte/src/KRASKA/libter27/tests/: test27.c  test27io.c  test927.c  test9io.c
Kremonte/src/KRASKA/old/: Hept.h  Trit.h  Tryte.h
Kremonte/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
KxGUI/: CMakeLists.txt
KxGUI/include/: KxGUI.h
KxGUI/src/: EntryPoint.h
KxGUI/src/Core/: Application.cpp  Application.h  Image.cpp  Image.h  Layer.h  Random.cpp  Random.h  Timer.h
KxGUI/src/Input/: Input.cpp  Input.h  KeyCodes.h
NULLglfw/: NULLglfw.NULLBUILD
toolchain/: BUILD.bazel  cc_toolchain_config.bzl
