cc_library(
    name = "Kremonte",
    hdrs = [
            "Kremonte.h",
            "krpch.cpp",
            "krpch.h",
    ],
    deps = [
            "//Kremonte/src/Core:Kremonte-Core",
            "//Kremonte/src/Events:Kremonte-Events",
            "//Kremonte/Platform/Windows:Kremonte-Platform-Windows",
            "//Kremonte/src/KRASKA:KRASKA",
            "//third_party/glfw",
            "//third_party/libter27",
            #"@rules_vulkan//vulkan:vulkan_cc_library",
            "@spdlog//:spdlog",
    ],
    visibility = ["//visibility:public"],
)

exports_files(["Kremonte.h", "krpch.h", "kraspch.h"])