cc_library(
    name = "KRASKA",
    srcs = [
            
    ],
    hdrs = [
            "KMachine.h",
            "Puppet.h",
            "//Kremonte:krpch.h",
            "//Kremonte/src/Core:Log.h",
            "//Kremonte/src/Core:Base.h",
            "//Kremonte/src/Core:Assert.h",
    ],
    deps = [
            "@spdlog//:spdlog",
    ],
    visibility = ["//visibility:public"],
)
exports_files(["Puppet.h", "KMachine.h"])