cc_library(
    name = "KRASKA",
    srcs = [
            "KMachine.cpp",
    ],
    hdrs = [
            "KMachine.h",
            "Puppet.h",
            "//Kremonte:krpch.h",
    ],
    deps = [
            "@spdlog//:spdlog",
            "//Kremonte/src/KRASKA/CPU:KRASKA-CPU",
            "//Kremonte/src/KRASKA/Weavinglimb:KRASKA-Weavinglimb",
    ],
    visibility = ["//visibility:public"],
)
exports_files(["Puppet.h", "KMachine.h"])