cc_library(
    name = "KRASKA",
    srcs = [

    ],
    hdrs = [
            "//Kremonte:krpch.h",
    ],
    deps = [
            "@spdlog//:spdlog",
            "//Kremonte/src/KRASKA/KRASKAboy/Base:KRASKAboy-Base",
            "//Kremonte/src/KRASKA/KRASKAboy/Cartridge:KRASKAboy-Cartridge",
            "//Kremonte/src/KRASKA/KRASKAboy/CPU:KRASKAboy-CPU",
            "//Kremonte/src/KRASKA/KRASKAboy/Util:KRASKAboy-Util",
            "//Kremonte/src/KRASKA/KRASKAboy/Video:KRASKAboy-Video",
            "//Kremonte/src/KRASKA/Puppet:KRASKA-Puppet",
    ],
    visibility = ["//visibility:public"],
)