cc_library(
    name = "KRASKA-CPU",
    hdrs = [
            "CPU.h",
            "Register.h",
            "//Kremonte/src/KRASKA:KMachine.h",
            "//Kremonte:krpch.h",
    ],
    srcs = [
            "CPU.cpp",
            "Register.cpp",
    ],
    deps = [
            "@spdlog//:spdlog",
            "//third_party/libter27:libter27",
            "//Kremonte/src/Core:Kremonte-Core",
            "//Kremonte/Platform/Windows:Kremonte-Platform-Windows",
    ],
    visibility = ["//visibility:public"],       
)