cc_library(
    name = "KRASKA-Puppet",
    srcs = [
            "Puppet.cpp",
            "KRASKAboy.cpp",
    ],
    hdrs = [
            "Puppet.h",
            "KRASKAboy.h",
            "//Kremonte:krpch.h",
            "//Kremonte/src/KRASKA/KRASKAboy/CPU:Opcode_Cycles.h",
            "//Kremonte/src/KRASKA/KRASKAboy/CPU:Opcode_Names.h",
            "//Kremonte/src/KRASKA/KRASKAboy/Video:Color.h",
    ],
    deps = [
            "@spdlog//:spdlog",
            "//Kremonte/src/KRASKA/Puppet/Weavinglimb:KRASKA-Puppet-Weavinglimb",
            "//Kremonte/src/KRASKA/KRASKAboy:KRASKAboy",
    ],
    visibility = ["//visibility:public"],
)
exports_files(["Puppet.h", "KRASKAboy.h"])