cc_library(
    name = "KRASKA-Weavinglimb",
    hdrs = [
            "Heartdrive.h",
            "Weavinglimb.h",
            "Cartridge.h",
            "//Kremonte:krpch.h",
    ],
    srcs = [
            "Heartdrive.cpp",
            "Cartridge.cpp",
    ],
    deps = [
            "@spdlog//:spdlog",
            "//Kremonte/src/Core:Kremonte-Core",
    ],
    visibility = ["//visibility:public"],       
)