cc_library(
    name = "KRASKAboy-Base",
    hdrs = [
            "Boot.h",
            "Debugger.h",
            "Definitions.h",
            "Input.h",
            "KRASKAboy.h",
            "KRASKAboy_prelude.h",
            "Options.h",
            "//Kremonte:krpch.h",
            "//Kremonte/src/KRASKA/KRASKAboy/Util:bitwise.h",
            "//Kremonte/src/KRASKA/KRASKAboy/Util:KRboy_Log.h",
            "//Kremonte/src/KRASKA/KRASKAboy/Util:KRboy_String_Utils.h",
            "//Kremonte/src/KRASKA/KRASKAboy/CPU:CPU.h",
            "//Kremonte/src/KRASKA/KRASKAboy/CPU:Address.h",
            "//Kremonte/src/KRASKA/KRASKAboy/CPU:Register.h",
            "//Kremonte/src/KRASKA/KRASKAboy/CPU:Serial.h",
            "//Kremonte/src/KRASKA/KRASKAboy/CPU:Timer.h",
            "//Kremonte/src/KRASKA/KRASKAboy/CPU:MMU.h",
            "//Kremonte/src/KRASKA/KRASKAboy/Video:Video.h",
            "//Kremonte/src/KRASKA/KRASKAboy/Video:Framebuffer.h",
            "//Kremonte/src/KRASKA/KRASKAboy/Video:Tile.h",
            "//Kremonte/src/KRASKA/KRASKAboy/Cartridge:Cartridge.h",
            "//Kremonte/src/KRASKA/KRASKAboy/Cartridge:Cartridge_Info.h",
    ],
    srcs = [
            "Debugger.cpp",
            "Input.cpp",
            "KRASKAboy.cpp",
    ],
    deps = [
            "@spdlog//:spdlog",
            "//third_party/libter27:libter27",
            "//Kremonte/src/Core:Kremonte-Core",
            "//Kremonte/Platform/Windows:Kremonte-Platform-Windows",
            #"//Kremonte/src/KRASKA/KRASKAboy/Cartridge:KRASKAboy-Cartridge",
            #"//Kremonte/src/KRASKA/KRASKAboy/CPU:KRASKAboy-CPU",
            #"//Kremonte/src/KRASKA/KRASKAboy/Util:KRASKAboy-Util",
            #"//Kremonte/src/KRASKA/KRASKAboy/Video:KRASKAboy-Video",
    ],
    visibility = ["//visibility:public"],       
)