cc_library(
    name = "KRASKAboy-CPU",
    hdrs = [
            "Address.h",
            "CPU.h",
            "MMU.h",
            "Opcode_Cycles.h",
            "Opcode_Names.h",
            "Register.h",
            "Serial.h",
            "Timer.h",
            "//Kremonte:krpch.h",
    ],
    srcs = [
            "Address.cpp",
            "CPU.cpp",
            "MMU.cpp",
            "Opcode_Mapping.cpp",
            "Opcodes.cpp",
            "Register.cpp",
            "Serial.cpp",
            "Timer.cpp",
    ],
    deps = [
            "@spdlog//:spdlog",
            "//third_party/libter27:libter27",
            "//Kremonte/src/Core:Kremonte-Core",
            "//Kremonte/Platform/Windows:Kremonte-Platform-Windows",
            "//Kremonte/src/KRASKA/KRASKAboy/Base:KRASKAboy-Base",
            #"//Kremonte/src/KRASKA/KRASKAboy/Util:KRASKAboy-Util",
            #"//Kremonte/src/KRASKA/KRASKAboy/Cartridge:KRASKAboy-Cartridge",
            #"//Kremonte/src/KRASKA/KRASKAboy/Video:KRASKAboy-Video",
    ],
    visibility = ["//visibility:public"],       
)
exports_files(["Address.h", "CPU.h", "MMU.h", "Register.h", "Serial.h", "Timer.h"])