cc_library(
    name = "KRASKAboy-Cartridge",
    hdrs = [
            "Cartridge.h",
            "Cartridge_Info.h",
            "//Kremonte:krpch.h",
            "//Kremonte/src/KRASKA/KRASKAboy/Util:KRboy_Files.h",
    ],
    srcs = [
            "Cartridge.cpp",
            "Cartridge_Info.cpp",
    ],
    deps = [
            "@spdlog//:spdlog",
            "//third_party/libter27:libter27",
            "//Kremonte/src/Core:Kremonte-Core",
            "//Kremonte/Platform/Windows:Kremonte-Platform-Windows",
            "//Kremonte/src/KRASKA/KRASKAboy/Base:KRASKAboy-Base",
            #"//Kremonte/src/KRASKA/KRASKAboy/CPU:KRASKAboy-CPU",
            #"//Kremonte/src/KRASKA/KRASKAboy/Util:KRASKAboy-Util",
            #"//Kremonte/src/KRASKA/KRASKAboy/Video:KRASKAboy-Video",
    ],
    visibility = ["//visibility:public"],       
)
exports_files(["Cartridge.h", "Cartridge_Info.h"])