cc_library(
    name = "KRASKA-Puppet-Weavinglimb",
    hdrs = [
            "Heartridge.h",
            "HeartridgeOptions.h",
            "Heartdrive.h",
            "Weavinglimb.h",
            "//Kremonte:krpch.h",
    ],
    srcs = [
            "Heartdrive.cpp",
            "Heartridge.cpp",
    ],
    deps = [
            "@spdlog//:spdlog",
            "//Kremonte/src/Core:Kremonte-Core",
            "//Kremonte/Platform/Windows:Kremonte-Platform-Windows",
            "//Kremonte/src/KRASKA/KRASKAboy/Base:KRASKAboy-Base",
            "//Kremonte/src/KRASKA/KRASKAboy/Util:KRASKAboy-Util",
    ],
    visibility = ["//visibility:public"],       
)